--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.17.1",
     "dotenv": "^4.0.0",
-    "express": "^4.15.2",
-    "now": "^11.1.6"
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "assert": "^1.4.1",
